--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,14 +2,15 @@
 name = "begonia-python-sdk"
 version = "0.1.0"
 description = ""
-authors = ["vforfreedom96@gmail.com <vforfreedom96@gmail.com>"]
+authors = ["vforfreedom <vforfreedom96@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.9"
 requests = "^2.32.3"
-grpcio = "^1.64.1"
-grpcio-tools = "^1.64.1"
+protobuf = "^4.21.12"
+grpcio-tools = "^1.50.0"
+grpcio = "^1.62.2"
 httpx = "^0.27.0"
 mypy-protobuf = "^3.6.0"
 google-api-python-client = "^2.133.0"
