--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "begonia_python_sdk/protos"]
-	path = begonia_python_sdk/protos
+[submodule "begonia/protos"]
+	path = begonia/protos
 	url = git@github.com:begonia-org/protos.git
