--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ pydantic-core = "^2.19.0"
 annotated-types = "^0.7.0"
 pydantic = "^2.7.4"
 typing-extensions = "^4.12.2"
+loguru = "^0.7.2"
+h11 = "^0.14.0"
 
 
 [[tool.poetry.source]]
