--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ pydantic = "^2.7.4"
 typing-extensions = "^4.12.2"
 loguru = "^0.7.2"
 h11 = "^0.14.0"
+grpcio-status = "1.42.0"
 
 
 [[tool.poetry.source]]
